--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h5{
      display: flex; 
      /* justify-content: space-around; */
      align-items: center;
-     
+     padding-block: 20px;
      justify-content: space-around;
 
      
@@ -346,6 +346,7 @@ h5{
 #false{
     width: 100%;
     height: 15%;
+    padding-block: 20px;
      
 }
 
