--- a/meadiaquaries.css
+++ b/meadiaquaries.css
@@ -50,7 +50,7 @@
 #header{
     padding-block: 20px;
 }
-    #flase{
+    #false{
         padding-block: 20px;}
 }   
 @media screen and (width  <= 1150px){
